Fix vertical alignment for last texts.

--- a/src/styles/animations.styl
+++ b/src/styles/animations.styl
@@ -28,6 +28,10 @@
   line-height: 1.7;
 
   .video-overlay__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     div {
       display: block;
       opacity: 0;
